--- a/audio_point.ioc
+++ b/audio_point.ioc
@@ -1,4 +1,10 @@
 #MicroXplorer Configuration settings - do not modify
+CAN1.BS1=CAN_BS1_13TQ
+CAN1.BS2=CAN_BS2_2TQ
+CAN1.CalculateTimeQuantum=500.0
+CAN1.IPParameters=CalculateTimeQuantum,BS1,BS2,Prescaler,Mode
+CAN1.Mode=CAN_MODE_NORMAL
+CAN1.Prescaler=40
 DFSDM1.Divider=12
 DFSDM1.DmaMode_reg_FIL0=ENABLE
 DFSDM1.FastMode_reg_FIL0=ENABLE
@@ -33,43 +39,48 @@ Dma.SAI1_A.1.Priority=DMA_PRIORITY_HIGH
 Dma.SAI1_A.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configTOTAL_HEAP_SIZE,FootprintOK
-FREERTOS.Tasks01=defaultTask,0,512,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;decodeTask,-3,512,StartDecodeTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,0,512,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;decodeTask,-3,512,StartDecodeTask,Default,NULL,Dynamic,NULL,NULL;canTask,-3,512,StartCanTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configTOTAL_HEAP_SIZE=8000
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32L4
-Mcu.IP0=DFSDM1
-Mcu.IP1=DMA
-Mcu.IP2=FREERTOS
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SAI1
-Mcu.IP6=SYS
-Mcu.IPNb=7
+Mcu.IP0=CAN1
+Mcu.IP1=DFSDM1
+Mcu.IP2=DMA
+Mcu.IP3=FREERTOS
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SAI1
+Mcu.IP7=SYS
+Mcu.IPNb=8
 Mcu.Name=STM32L476V(C-E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
 Mcu.Pin1=PE3
-Mcu.Pin10=PB6
-Mcu.Pin11=PB7
-Mcu.Pin12=VP_FREERTOS_VS_ENABLE
-Mcu.Pin13=VP_SAI1_VP_$IpInstance_SAIA_SAI_BASIC
-Mcu.Pin14=VP_SYS_VS_tim1
+Mcu.Pin10=PE9
+Mcu.Pin11=PD0
+Mcu.Pin12=PD1
+Mcu.Pin13=PB6
+Mcu.Pin14=PB7
+Mcu.Pin15=VP_FREERTOS_VS_ENABLE
+Mcu.Pin16=VP_SAI1_VP_$IpInstance_SAIA_SAI_BASIC
+Mcu.Pin17=VP_SYS_VS_tim1
 Mcu.Pin2=PE4
 Mcu.Pin3=PE5
 Mcu.Pin4=PE6
 Mcu.Pin5=PH0-OSC_IN (PH0)
 Mcu.Pin6=PH1-OSC_OUT (PH1)
-Mcu.Pin7=PE7
-Mcu.Pin8=PE8
-Mcu.Pin9=PE9
-Mcu.PinsNb=15
+Mcu.Pin7=PA0
+Mcu.Pin8=PE7
+Mcu.Pin9=PE8
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L476VGTx
 MxCube.Version=5.0.1
 MxDb.Version=DB.5.0.1
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.CAN1_RX0_IRQn=true\:5\:0\:true\:false\:true\:true\:true
 NVIC.DMA1_Channel4_IRQn=true\:5\:0\:true\:false\:true\:true\:false
 NVIC.DMA2_Channel1_IRQn=true\:5\:0\:false\:false\:true\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -84,6 +95,8 @@ NVIC.TIM1_UP_TIM16_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.TimeBase=TIM1_UP_TIM16_IRQn
 NVIC.TimeBaseIP=TIM1
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PA0.Locked=true
+PA0.Signal=GPIO_Input
 PB6.Locked=true
 PB6.Signal=I2C1_SCL
 PB7.Locked=true
@@ -96,6 +109,14 @@ PCC.Seq0=0
 PCC.Series=STM32L4
 PCC.Temperature=25
 PCC.Vdd=null
+PD0.GPIOParameters=GPIO_PuPd
+PD0.GPIO_PuPd=GPIO_PULLUP
+PD0.Locked=true
+PD0.Mode=Master
+PD0.Signal=CAN1_RX
+PD1.Locked=true
+PD1.Mode=Master
+PD1.Signal=CAN1_TX
 PE2.Mode=SAI_A_MasterWithClock
 PE2.Signal=SAI1_MCLK_A
 PE3.GPIOParameters=GPIO_Label
@@ -153,7 +174,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_DFSDM1_Init-DFSDM1-false-HAL-true,5-MX_SAI1_Init-SAI1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_DFSDM1_Init-DFSDM1-false-HAL-true,5-MX_SAI1_Init-SAI1-false-HAL-true,6-MX_CAN1_Init-CAN1-false-HAL-true
 RCC.ADCFreq_Value=86000000
 RCC.AHBFreq_Value=80000000
 RCC.APB1Freq_Value=80000000
