--- a/audio_point.ioc
+++ b/audio_point.ioc
@@ -1,10 +1,10 @@
 #MicroXplorer Configuration settings - do not modify
 CAN1.BS1=CAN_BS1_13TQ
 CAN1.BS2=CAN_BS2_2TQ
-CAN1.CalculateTimeQuantum=500.0
+CAN1.CalculateTimeQuantum=2000.0
 CAN1.IPParameters=CalculateTimeQuantum,BS1,BS2,Prescaler,Mode
 CAN1.Mode=CAN_MODE_NORMAL
-CAN1.Prescaler=40
+CAN1.Prescaler=160
 DFSDM1.Divider=12
 DFSDM1.DmaMode_reg_FIL0=ENABLE
 DFSDM1.FastMode_reg_FIL0=ENABLE
@@ -38,9 +38,10 @@ Dma.SAI1_A.1.PeriphInc=DMA_PINC_DISABLE
 Dma.SAI1_A.1.Priority=DMA_PRIORITY_HIGH
 Dma.SAI1_A.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,configTOTAL_HEAP_SIZE,FootprintOK
+FREERTOS.IPParameters=Tasks01,configTOTAL_HEAP_SIZE,FootprintOK,configUSE_IDLE_HOOK
 FREERTOS.Tasks01=defaultTask,0,512,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;decodeTask,-3,512,StartDecodeTask,Default,NULL,Dynamic,NULL,NULL;canTask,-3,512,StartCanTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configTOTAL_HEAP_SIZE=8000
+FREERTOS.configUSE_IDLE_HOOK=1
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32L4
